atskafka (0.10) UNRELEASED; urgency=medium

  * Add missing field: uri_query. (Bug: T254317)
  * Move to dh-golang
  * go mod configuration

 -- Emanuele Rocca <ema@wikimedia.org>  Thu, 23 Jul 2020 16:01:18 +0200

atskafka (0.9) buster-wikimedia; urgency=medium

  * Build against prometheus-rdkafka-exporter 0.2. (Bug: T253551)
  * Drop atskafka_requests_total, no difference with atskafka_seq_number.
  * Do not log pointless messages about workers being started.

 -- Emanuele Rocca <ema@wikimedia.org>  Fri, 29 May 2020 10:56:18 +0000

atskafka (0.8) buster-wikimedia; urgency=medium

  * Add new prometheus metrics: atskafka_requests_total,
    atskafka_delivery_errors_total, atskafka_seq_number. (Bug: T253551)

 -- Emanuele Rocca <ema@wikimedia.org>  Thu, 28 May 2020 14:55:51 +0200

atskafka (0.7) buster-wikimedia; urgency=medium

  * Use prometheus-rdkafka-exporter to make kafka metrics available to
    prometheus. (Bug: T253197, T253551)

 -- Emanuele Rocca <ema@wikimedia.org>  Mon, 25 May 2020 13:24:26 +0200

atskafka (0.6) buster-wikimedia; urgency=medium

  * json: fix 'index out of range' panic on malformed fields:
    https://phabricator.wikimedia.org/P11114
  * Add tests for atskafka.go
  * Add pprof
  * Filter logs by regular expression

 -- Emanuele Rocca <ema@wikimedia.org>  Mon, 11 May 2020 10:05:18 +0200

atskafka (0.5) buster-wikimedia; urgency=medium

  * Reconnect to Unix socket in case of read errors

 -- Emanuele Rocca <ema@wikimedia.org>  Mon, 23 Mar 2020 10:01:37 +0100

atskafka (0.4) buster-wikimedia; urgency=medium

  * Add sequence number
  * Do not append to stats file

 -- Emanuele Rocca <ema@wikimedia.org>  Wed, 18 Mar 2020 16:28:43 +0100

atskafka (0.3) buster-wikimedia; urgency=medium

  * Convert float64 values to int when loading rdkafka configuration

 -- Emanuele Rocca <ema@wikimedia.org>  Tue, 17 Mar 2020 18:01:23 +0100

atskafka (0.2) buster-wikimedia; urgency=medium

  * Load rdkafka configuration from file
