@@ -6,4 +6,5 @@ require (
 	gerrit.wikimedia.org/r/operations/software/prometheus-rdkafka-exporter v0.0.0-20200529093333-b7616fed6a49
 	github.com/confluentinc/confluent-kafka-go v0.11.6
 	github.com/prometheus/client_golang v1.6.0
+	github.com/stretchr/testify v1.4.0
 )
